--- a/scroll_based_animation/src/index.html
+++ b/scroll_based_animation/src/index.html
@@ -10,13 +10,13 @@
     <canvas class="webgl"></canvas>
 
     <section class="section">
-        <h1>My Portfolio</h1>
+        <h1>what they talkin bout?</h1>
     </section>
     <section class="section">
-        <h2>My projects</h2>
+        <h2>they ain't talkin bout nothin</h2>
     </section>
     <section class="section">
-        <h2>Contact me</h2>
+        <h2>HUH?</h2>
     </section>
 
     <script type="module" src="./script.js"></script>
